--- a/01-birthday-reminder/setup/src/index.css
+++ b/01-birthday-reminder/setup/src/index.css
@@ -57,8 +57,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
   color: var(--clr-grey-9);
   line-height: 1.5;
@@ -188,4 +188,12 @@ main {
   border-radius: var(--radius);
   outline: 1px solid rgba(242, 138, 178, 0.8);
   cursor: pointer;
+}
+
+.container button:hover {
+  background-color: var(--clr-pink);
+  transition: 0.5s;
+  color: whitesmoke;
+  border-radius: 20px;
+  font-weight: bold;
 }
